--- a/lab-00.Rmd
+++ b/lab-00.Rmd
@@ -17,15 +17,15 @@ We set up the data frame. Edit the data below to include information about your 
 
 ```{r setup-tibble}
 team_data <- tibble(
-  name = c("Peter Rabbit", "member 1", "member 2", 
-           "member 3", "member 4"),
-  github_username = c("mcgregors-garden", "username 1", "username 2", 
-                      "username 3", "username 4"), 
-  colour = c("powderblue", "colour 1", "colour 2", 
-             "colour 3", "colour 4"),
-  hobby = c("Hopping", "hobby 1", "hobby 2", 
-            "hobby 3", "hobby 4"),
-  favourite_number = c(2, NA, NA, NA, NA)
+  name = c("Navya", "Kaj", "Zhi Wei", 
+           "Yuki"),
+  github_username = c("navyeahh", "abcd", "efgh", 
+                      "ijk"), 
+  colour = c("blue", "black", "yellow", 
+             "grey"),
+  hobby = c("tennis", "football", "reading", 
+            "drawing"),
+  favourite_number = c(2, 4, 5, 8)
   )
 
 team_data
